# challenge

./: Parser.hs  README.md  Tests.hs  Types.hs  challenge.cabal
app/: Main.hs
extra/: bad-file  inconsistent-file  invalid-file  random-bytes  really-bad-file  too-big-file
idris-version/: Main.idr
src/: Common.hs  Editor.hs  Encoder.hs  Input.hs  Parser.hs  Types.hs  Validator.hs
test/: Spec.hs
